--- a/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
@@ -8,7 +8,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <label class="topictable">User</label>
+            <label class="topicmargin-size74">User</label>
+            <a href="/User/CreateUser"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgAdminCreate" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
@@ -20,9 +21,9 @@
                 <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
                 <th class="Rowpointer">UserName</th>
-                <th class="Rowpointer">Name</th>
-                <th class="Rowpointer">Email</th>
-                <th class="Rowpointer">UserStatus</th>
+                @*<th class="Rowpointer">Name</th>*@
+                @*<th class="Rowpointer">Email</th>*@
+                @*<th class="Rowpointer">UserStatus</th>*@
                 <th class="Rowpointer">SecurityProfile</th>
                 <th></th>
             </tr>
