--- a/Alpha/AlphaMvc/Views/User/EditUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/EditUser.cshtml
@@ -30,7 +30,7 @@
         <form id="myform">
             <ul class="form-style-1">
                 <li>
-                    <label class="label-2" style="margin-right: 33%;">UserName<span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">Title</label>
+                    <label class="label-2" style="margin-right: 33%;">UserName<span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">Position</label>
                 </li>
                 <li>
                     <input type="text" id="txtUserName" name="field_1" class="field-divided" disabled/>&nbsp;<input type="text" id="txtTitle" name="field1" class="field-divided" disabled />
@@ -48,16 +48,10 @@
                     <input type="text" id="txtDepartment" name="field_1" class="field-divided" disabled />&nbsp;<input type="text" id="txtCompany" name="field1" class="field-divided" disabled />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 42%;">E-mail</label>
+                    <label class="label-2" style="margin-right: 39%;">E-mail</label>&nbsp;<label class="label-2" style="margin-right: 5%;">SecurityProfile</label>
                 </li>
                 <li>
-                    <input type="text" id="txtEmail" name="field1" class="field-divided" placeholder="E-mail" disabled />
-                </li>
-                <li>
-                    <label class="label-2" style="margin-right: 45%;">SecurityProfile</label>
-                </li>
-                <li>
-                    <select id="cmbSecurityProfile" name="cmbSecurityProfile" class="field-divided"></select>
+                    <input type="text" id="txtEmail" name="field1" class="field-divided" disabled />&nbsp;<select id="cmbSecurityProfile" name="cmbSecurityProfile" class="field-divided"></select>
                 </li>
                 <li>
                     <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'User', @Request.Params["id"])">Save</button>
