--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -118,7 +118,7 @@
                                             <button type="button" id="btnSave" class="btnCreate" onclick="OpenJobOrder(@Request.Params["id"])"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" id="BDCCreate"/></button>
                                         </div>
                                         <div class="grigbar">
-                                            <div class="myDIV">
+                                            <div class="table-responsive">
                                                 <table id="tblBDCJOb" class="table table-striped scrolling" onended="SetPaging()">
                                                     <thead class="bgthead">
                                                         <tr>
