--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -122,8 +122,8 @@ $(document).ready(function () {
             <th class="Rowpointer">No.</th>
             <th class="hidecolumn Rowpointer">ID</th>
             <th class="Rowpointer">JobNo</th>
-            <th class="Rowpointer">Type of Working</th>
-            <th class="Rowpointer">JobDate</th>
+            <th class="hideANDseek Rowpointer">Type of Working</th>
+            <th class="hideANDseek Rowpointer">JobDate</th>
             <th class="Rowpointer">Start Working</th>
             <th class="Rowpointer">End Working</th>
             <th></th>
