--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -108,7 +108,7 @@
                 </li>
                 <li>
                     <input type="text" id="txtAdded" name="field6" class="Number field-select-small" placeholder="" value="0"/>&nbsp;
-                    <input type="text" id="txtDeduction" name="field6" class="Number field-select-small" placeholder="" value="0"/>
+                    <input type="text" id="txtDeduction" name="field6" class="Number field-select-small" placeholder="" value="0" onblur="GetDeduct()"/>
                 </li>
                 <br />
                 <li>
