--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -25,7 +25,7 @@
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง<span class="required">*</span></label>
+                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง</label>
                 </li>
                 <li>
                     <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="" autofocus required />&nbsp;<input type="text" id="txtMachineNo" name="field1" class="field-divided" required />
