--- a/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
@@ -16,21 +16,23 @@
                 </li>
             </ul>
             <br />
-            <table class="table table-striped">
-                <thead class="bgthead">
-                    <tr>
-                        <th>No.</th>
-                        <th class="hidecolumn">ID</th>
-                        <th>Menu</th>
-                        <th>View</th>
-                        <th>Insert</th>
-                        <th class="wraptext">Update</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody id="result"></tbody>
-            </table>
-        </form>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead class="bgthead">
+                        <tr>
+                            <th>No.</th>
+                            <th class="hidecolumn">ID</th>
+                            <th>Menu</th>
+                            <th>View</th>
+                            <th>Insert</th>
+                            <th class="wraptext">Update</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody id="result"></tbody>
+                </table>
+            </div>
+</form>
     }
 </div>
 <script type="text/javascript">
