--- a/Alpha/AlphaMvc/Views/Technician/EditTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/EditTechnician.cshtml
@@ -63,20 +63,22 @@
                                 <div class="resp-tabs-container hor_1">
                                     <div>
                                         <div class="grigbar">
-                                            <table class="table table-striped">
-                                                <thead class="bgthead">
-                                                    <tr>
-                                                        <th>No.</th>
-                                                        <th>บริษัท</th>
-                                                        <th>CerNo</th>
-                                                        <th>ประเภทบัตร</th>
-                                                        <th>วันออกบัตร</th>
-                                                        <th>วันหมดอายุ</th>
+                                            <div class="table-responsive">
+                                                <table class="table table-striped">
+                                                    <thead class="bgthead">
+                                                        <tr>
+                                                            <th>No.</th>
+                                                            <th class="hideANDseek">บริษัท</th>
+                                                            <th>CerNo</th>
+                                                            <th class="hideANDseek">ประเภทบัตร</th>
+                                                            <th class="hideANDseek">วันออกบัตร</th>
+                                                            <th>วันหมดอายุ</th>
 
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="Card"></tbody>
-                                            </table>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody id="Card"></tbody>
+                                                </table>
+                                            </div>
                                         </div>
                                     </div>
                                     <div>
