--- a/Alpha/AlphaMvc/Views/User/EditUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/EditUser.cshtml
@@ -33,25 +33,25 @@
                     <label class="label-2" style="margin-right: 33%;">UserName<span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">Position</label>
                 </li>
                 <li>
-                    <input type="text" id="txtUserName" name="field_1" class="field-divided" disabled/>&nbsp;<input type="text" id="txtTitle" name="field1" class="field-divided" disabled />
+                    <input type="text" id="txtUserName" name="field_1" class="field-divided width-190" disabled/>&nbsp;<input type="text" id="txtTitle" name="field1" class="field-divided width-45per" disabled />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 45%;">ชื่อ</label>&nbsp;<label class="label-2" style="margin-right: 10%;">นามสกุล</label>
+                    <label class="label-2 marginright-43">ชื่อ</label>&nbsp;<label class="label-2" style="margin-right: 5%;">นามสกุล</label>
                 </li>
                 <li>
-                    <input type="text" id="txtFirstName" name="field_1" class="field-divided" disabled />&nbsp;<input type="text" id="txtLastName" name="field1" class="field-divided" disabled />
+                    <input type="text" id="txtFirstName" name="field_1" class="field-divided width-190" disabled />&nbsp;<input type="text" id="txtLastName" name="field1" class="field-divided width-45per" disabled />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 30%;">Department</label>&nbsp;<label class="label-2" style="margin-right: 10%;">Company</label>
+                    <label class="label-2 marginright-28">Department</label>&nbsp;<label class="label-2" style="margin-right: 5%;">Company</label>
                 </li>
                 <li>
-                    <input type="text" id="txtDepartment" name="field_1" class="field-divided" disabled />&nbsp;<input type="text" id="txtCompany" name="field1" class="field-divided" disabled />
+                    <input type="text" id="txtDepartment" name="field_1" class="field-divided width-190" disabled />&nbsp;<input type="text" id="txtCompany" name="field1" class="field-divided width-45per" disabled />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 39%;">E-mail</label>&nbsp;<label class="label-2" style="margin-right: 5%;">SecurityProfile</label>
+                    <label class="label-2 marginright-36">E-mail</label>&nbsp;<label class="label-2" style="margin-right: 5%;">SecurityProfile</label>
                 </li>
                 <li>
-                    <input type="text" id="txtEmail" name="field1" class="field-divided" disabled />&nbsp;<select id="cmbSecurityProfile" name="cmbSecurityProfile" class="field-divided"></select>
+                    <input type="text" id="txtEmail" name="field1" class="field-divided width-190" disabled />&nbsp;<select id="cmbSecurityProfile" name="cmbSecurityProfile" class="field-divided width-45per"></select>
                 </li>
                 <li>
                     <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'User', @Request.Params["id"])">Save</button>
