--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -32,13 +32,13 @@
         <form id="myform">
             <ul class="form-style-1">
                 <li>
-                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง<span class="required">*</span></label>
+                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง</label>
                 </li>
                 <li>
                     <input type="text" id = "txtSerialNo" name="field_1" class="field-divided" placeholder="Serial" autofocus required />&nbsp;<input type="text" id = "txtMachineNo" name="field1" class="field-divided" placeholder="" required />
                 </li>
                 <li>
-                    <label>ประเภทสินค้า<span class="required">*</span></label>
+                    <label>ประเภทสินค้า</label>
                     <select id="cmbProductType" name="cmbProductType" class="field-divided" >
                     </select>
                     @*onchange="cmbProductType_Change()"*@
@@ -89,7 +89,7 @@
                     <textarea name="field5" id="txtDiscription" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <label>หมายเหตุ<span class="required">*</span></label>
+                    <label>หมายเหตุ</label>
                     <textarea name="field5" id = "txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
