--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -70,6 +70,7 @@
                     <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
                     <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-center" /></div>
                     <input type="hidden" id="hidFilePath" />
+                    <input type="hidden" id="hidProductFileID" />
                 </li>
                 <li>
                     <label>รายละเอียด</label>
@@ -80,11 +81,20 @@
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'Products', @Request.Params["id"])">Save</button>
+                    <button type="button" id="btnSave" class="btn btn-primary" onclick="validate()">Save</button>
                 </li>
             </ul>
             <ul class="attachgrid">
                 <li>
+                    <table class="barattach">
+                        <tr>
+                            <td>
+                                <div class="topicattach"><a href="#"><img src="@Url.Content("~/Images/attachments2.png")" /></a></div>
+                            </td>
+                        </tr>
+                    </table>
+                    <input type="file" id="FileUpload1" multiple />
+                    @*<input type="button" id="btnUpload" value="Upload Files" />*@  
                     @*<table class="barattach">
                         <tr>
                             <td>
@@ -93,86 +103,17 @@
                             </td>
                         </tr>
                     </table>*@
-                    @*<table class="example-2" cellspacing="0">
+                    <table class="example-2" cellspacing="0">
                         <thead class="theader">
                             <tr>
                                 <th>No.</th>
                                 <th>File Name</th>
-                                <th>Doc Type</th>
+                                <th class="hidecolumn">Path Name</th>
                                 <th></th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>File1</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>File2</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>File3</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>File4</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>*@
+                        <tbody id="result"></tbody>
+                    </table>
                 </li>
                 <br />
             </ul>
@@ -188,8 +129,14 @@
         var Isview = val[2];
 
         GetData(@Request.Params["id"]);
+        alert("Test2");
         GetRemain(@Request.Params["id"]);
         ControlEnable(Isview);
+        alert("Test3");
     });
+    function validate() {
+        alert("validate");
+        Isvalidate('Update', 'Products', @Request.Params["id"])
+    }
 </script>
 
