--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -99,14 +99,16 @@
             </ul>
             <ul class="attachgrid">
                 <li>
-                    <table class="barattach">
-                        <tr>
-                            <td>
-                                <div class="topicattach"><a href="#"><img src="@Url.Content("~/Images/attachments2.png")" /></a></div>
-                            </td>
-                        </tr>
-                    </table>
                     <input type="file" id="FileUpload1" multiple />
+                    <table class="example-2" cellspacing="0">
+                        <thead class="theader">
+                            <tr>
+                                <th>No.</th>
+                                <th>File Name</th>
+                                <th class="hidecolumn">Path Name</th>
+                            </tr>
+                        </thead>
+                    </table>
                     @*<table class="barattach">
                         <tr>
                             <td>                             
