--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -24,10 +24,11 @@ function GetDetail(currentMonth) {
     }
     today = yyyy + '-' + mm + '-' + dd;
 
-    var dataObject = { CalendarMonth: currentMonth }
+    
+    var dataObject = { CalendarMonth: currentMonth + '&' + localStorage['IsTechnician'] + '&' + localStorage['FirstName'] + '&' + localStorage['LastName'] }
     $.ajax(
        {
-           url: 'http://localhost:13131/api/CalendarJobOrder',
+           url: 'http://alphagroup.co.th:8082/api/CalendarJobOrder',
            type: 'GET',
            data: dataObject,
            datatype: 'json',
