--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -26,10 +26,11 @@
         }
         today = yyyy + '-' + mm + '-' + dd;
 
-        var dataObject = { CalendarMonth: currentMonth }
+        
+        var dataObject = { CalendarMonth: currentMonth + '&' + localStorage['IsTechnician'] + '&' + localStorage['FirstName'] + '&' + localStorage['LastName'] }
         $.ajax(
            {
-               url: 'http://localhost:13131/api/CalendarManPower',
+               url: 'http://alphagroup.co.th:8082/api/CalendarManPower',
                type: 'GET',
                async: false,
                data: dataObject,
