--- a/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
@@ -27,10 +27,10 @@ function GetDetail(currentMonth) {
     }
     today = yyyy + '-' + mm + '-' + dd;
 
-    var dataObject = { CalendarMonth: currentMonth }
+    var dataObject = { CalendarMonth: currentMonth + '&' + localStorage['IsTechnician'] + '&' + localStorage['FirstName'] + '&' + localStorage['LastName'] }
     $.ajax(
        {
-           url: 'http://localhost:13131/api/CalendarJobOrder',
+           url: 'http://alphagroup.co.th:8082/api/CalendarJobOrder',
            type: 'GET',
            data: dataObject,
            datatype: 'json',
@@ -86,10 +86,10 @@ function GetDetailManPower(currentMonth) {
     }
     today = yyyy + '-' + mm + '-' + dd;
 
-    var dataObject = { CalendarMonth: currentMonth }
+    var dataObject = { CalendarMonth: currentMonth + '&' + localStorage['IsTechnician'] + '&' + localStorage['FirstName'] + '&' + localStorage['LastName'] }
     $.ajax(
        {
-           url: 'http://localhost:13131/api/CalendarManPower',
+           url: 'http://alphagroup.co.th:8082/api/CalendarManPower',
            type: 'GET',
            async: false,
            data: dataObject,
