--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -24,7 +24,9 @@ function GetDetail(currentMonth) {
     }
     today = yyyy + '-' + mm + '-' + dd;
 
-    
+    //alert(localStorage['IsTechnician']);
+    //alert(localStorage['FirstName']);
+    //alert(localStorage['LastName']);
     var dataObject = { CalendarMonth: currentMonth + '&' + localStorage['IsTechnician'] + '&' + localStorage['FirstName'] + '&' + localStorage['LastName'] }
     $.ajax(
        {
