--- a/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
@@ -30,6 +30,7 @@
             <ul class="form-style-1">
                 <li>
                     <label class="label-2" style="margin-right: 25%;">UserName<span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;"></label>
+                    <input type="hidden" id="hidIsADUser" />
                 </li>
                 <li>
                     <input type="text" id="txtUserName" name="field_1" class="field-divided float-left width-190" />
