--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -30,7 +30,7 @@ function GetDetail(currentMonth) {
     var dataObject = { CalendarMonth: currentMonth + '&' + localStorage['IsTechnician'] + '&' + localStorage['FirstName'] + '&' + localStorage['LastName'] }
     $.ajax(
        {
-           url: 'http://localhost:13131/api/CalendarJobOrder',
+           url: 'http://alphagroup.co.th:8082/api/CalendarJobOrder',
            type: 'GET',
            data: dataObject,
            datatype: 'json',
