--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -98,6 +98,7 @@
                     <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                 </a>*@
                 <input type="hidden" id="hidCustID" />
+                <input type="hidden" id="hidBorroeeJobID" />
             </li>
             <li>
                 <label class="label-2" style="margin-right: 37%;">โทรศัพท์</label>&nbsp;<label class="label-2">แฟกซ์</label>
